--- a/CreateTripNewUser.css
+++ b/CreateTripNewUser.css
@@ -1,5 +1,4 @@
 :root {
-    /* --active-button-color: #10B981; */
     --background-item-color: #191C20;
     --text-color: #1B1C57;
     --text-secondary: #626687;
@@ -46,6 +45,7 @@ html, body {
     display: flex;
     align-items: center;
     gap: 10px;
+    padding: 10px;
 
 }
 
@@ -303,18 +303,70 @@ html, body {
 
 .footer-content{
     display: flex;
-    padding: 48px 24px 24px 24px;
+    padding: 48px 94px 24px 94px;
     flex-direction: column;
     gap: 24px;
-    align-self: stretch;
     border-radius: 24px;
     background: var(--BG---Secondary, #191C20);
-    margin: 112px 24px 24px 24px;
+    margin: 112px 24px 24px 24px;  /* We need to do responsive, centralize by whole window*/
 }
 
 .footer-content-container {
     display: flex;
-    padding: 48px 24px 24px 24px;
+    flex-direction: row;
     justify-content: space-between;    
+    align-items: flex-start;
+}
+
+.footer-contact-container {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+
+}
+
+.footer-divider {
+    display: flex;
+    gap: 24px;
+    flex-direction: column;
+}
+
+.footer-line {
+    width: 100%;
+    min-width: 1024px;
+    height: 1px;
+    background: rgba(250, 250, 250, 0.08);
+}
+
+.footer-contact-follow {
+    color: var(--White---Hight-Empathy, #FAFAFA);
+    font-family: 'Inter';
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 26px; /* 144.444% */
+    align-self: stretch;
+}
+
+.footer-follow-wrapper {
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+}
+
+.footer-follow-link {
+    padding: 12px;
+    border-radius: 8px;
+    background: var(--stroke-bg, rgba(250, 250, 250, 0.08));
+    display: flex;
     align-items: center;
+}
+
+.footer-text {
+    color: var(--White---Medium-Empathy, rgba(250, 250, 250, 0.74));
+    font-family: 'Inter';
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px; /* 142.857% */
 }
