Add style for search-field

--- a/CreateTripNewUser.css
+++ b/CreateTripNewUser.css
@@ -28,13 +28,15 @@ html, body {
     display: flex;
     flex-direction: column;
     gap: 24px;
+    margin-left: calc((100vw - 1200px) / 2);
+    margin-right: calc((100vw - 1200px) / 2);
+    margin-top: 24px;
 }
 
 .header-container {
     display: flex;
     flex-direction: row;
     padding: 16px 24px;
-    margin: 24px 24px 0 24px;  /* We need to do responsive, centralize by whole window*/
     border-radius: 32px;
     background: var(--background-item-color);
     box-shadow: 4px 4px 30.4px 0px rgba(7, 5, 5, 0.20);
@@ -127,12 +129,13 @@ html, body {
 
 .search-location {
     display: flex;
-    margin: 0 24px 0 24px;  /* We need to do responsive, centralize by whole window*/
     padding: 24px;
     flex-direction: column;
     gap: 24px;
     border-radius: 32px;
     background: var(--BG---Secondary, #191C20);
+    align-items: flex-start;
+
 }
 
 .search-location h2 {
@@ -148,17 +151,70 @@ html, body {
 .search-container {
     display: flex;
     flex-direction: row;
-    gap: 32px;
+    background-color: transparent;
+    gap: 16px;
+    justify-content: space-evenly;
+    flex-grow: 1;
 }
-
+  
 .search-container-input {
     display: flex;
-    gap: 8px;
     flex-direction: row;
+    gap: 8px;
+    align-items: flex-start;
+    border-right: 1px solid rgba(250, 250, 250, 0.08);
+    width: 288px;
+    padding: 10px;
 }
+
+.search-container-input:hover{
+    background-color: #212429;
+    border-radius: 25px; 
+}
+
+.search-container-input.last-field {
+    border: none;
+}
+  
+.search-field {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.search-field input {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    margin: 0;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+  
+.search-field input::placeholder {
+    color: var(--White---Medium-Empathy, rgba(250, 250, 250, 0.74));
+    font-family: 'Inter';
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.search-field label {
+    color: var(--White---Hight-Empathy, #FAFAFA);
+    font-family: 'Inter';
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-transform: capitalize;
+}
+  
 
 .search-button {
     display: flex;
+    width: 240px;
     justify-content: center;
     align-items: center;
     padding: 0px 24px;
@@ -177,7 +233,6 @@ html, body {
 }
 
 .create-new-user {
-    margin: 0 24px 0 24px;  /* We need to do responsive, centralize by whole window*/
     display: flex;
     padding: 24px;
     flex-direction: column;
@@ -203,7 +258,8 @@ html, body {
     display: flex;
     flex-direction: column;
     gap: 43px;
-
+    margin-left: calc((100vw - 1200px) / 2);
+    margin-right: calc((100vw - 1200px) / 2);
 }
 
 .recommendation-trips-header {
@@ -212,7 +268,6 @@ html, body {
     align-items: center;
     justify-content: center;
     gap: 395px;
-    
 }
 
 .recommendation-trips-header h2 {
@@ -308,7 +363,10 @@ html, body {
     gap: 24px;
     border-radius: 24px;
     background: var(--BG---Secondary, #191C20);
-    margin: 112px 24px 24px 24px;  /* We need to do responsive, centralize by whole window*/
+    margin-top: 112px;
+    margin-bottom: 24px;
+    margin-left: calc((100vw - 1200px) / 2);
+    margin-right: calc((100vw - 1200px) / 2);
 }
 
 .footer-content-container {
@@ -370,3 +428,4 @@ html, body {
     font-weight: 400;
     line-height: 20px; /* 142.857% */
 }
+
