--- a/journeys_style.css
+++ b/journeys_style.css
@@ -1,3 +1,9 @@
+:root {
+    --background-item-color: #191C20;
+    --text-color: #1B1C57;
+    --text-secondary: #626687; /* Fix root setting for project */
+}
+
 html, body {
     margin: 0;
     padding: 0;
@@ -15,20 +21,23 @@ html, body {
     flex-direction: row;
     padding: 16px 24px;
     margin: 24px;
-    align-items: center;
     border-radius: 32px;
-    background: #191C20;
+    background: var(--background-item-color);
     box-shadow: 4px 4px 30.4px 0px rgba(7, 5, 5, 0.20);
     justify-content: space-between;
 }
 
-.header-home, .footer-logo-container {
+.logo-section {
     display: flex;
     align-items: center;
-    text-decoration: none;
-    text-align: center;
-    font-family: Inter;
-    color: #FAFAFA;
+    gap: 10px;
+    padding: 10px;
+
+}
+
+.logo-section .logo-text {
+    color: var(--White---Hight-Empathy, #FAFAFA);
+    font-family: 'Inter';
     font-size: 24px;
     font-style: normal;
     font-weight: 600;
@@ -36,43 +45,54 @@ html, body {
     text-transform: lowercase;
 }
 
-.header-logo, .footer-logo {
-    margin-right: 10px;
-}
-
 .header-left-elements {
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 24px;
+}
+
+.header-navbar-options {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+}
+
+.header-nav-link {
+    display: flex;
+    padding: 12px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    border-radius: 8px;
+    text-decoration: none;
+}
+
+.header-nav-link.active-page {
+    background: var(--White---BG, #FAFAFA);
+}
+
+.nav-text {
+    color: var(--White---Hight-Empathy, #FAFAFA);
+    text-align: center;
+    font-family: 'Inter';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-decoration: none;
+}
+
+.nav-text.active-text {
+    color: var(--Black---Hight-Empathy, #141414);
+
 }
 
 .header-right-elements {
     display: flex;
     flex-direction: row;
     align-items: center;
-}
-
-.header-nav-img {
-    margin-right: 8px;
-}
-
-.header-nav-link {
-    padding: 12px;
-    text-align: center;
-    font-family: Inter;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    text-decoration: none;
-    color: #FAFAFA;
-}
-
-#active-page {
-    border-radius: 8px;
-    background: #FAFAFA;
-    color: #141414;
-    margin: 0px 24px;
+    gap: 16px;
 }
 
 .header-select {
@@ -103,11 +123,8 @@ html, body {
     border: none;
     border-radius: 8px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.header-user-icon {
+    width: 48px;
+    height: 48px;
     padding: 12px;
 }
 
@@ -128,7 +145,7 @@ html, body {
 
 .journeys-greeting-text {
     margin: 0px 0px 24px 0px;
-    font-family: Inter;
+    font-family: 'Inter';
     font-size: 24px;
     font-style: normal;
     font-weight: 500;
@@ -143,7 +160,7 @@ html, body {
 
 .journeys-greeting-button {
     color: #FAFAFA;
-    font-family: Inter;
+    font-family: 'Inter';
     font-size: 14px;
     font-style: normal;
     font-weight: 600;
@@ -175,7 +192,7 @@ section {
 .journeys-header {
     color: #FAFAFA;
     margin-bottom: 24px;
-    font-family: Inter;
+    font-family: 'Inter';
     font-size: 36px;
     font-style: normal;
     font-weight: 600;
@@ -207,7 +224,7 @@ section {
 
 .journey-item-country {
     color: #84F5B7;
-    font-family: Inter;
+    font-family: 'Inter';
     font-size: 14px;
     font-style: normal;
     font-weight: 600;
@@ -217,7 +234,7 @@ section {
 
 .journey-item-destination {
     color: #FAFAFA;
-    font-family: Inter;
+    font-family: 'Inter';
     font-size: 18px;
     font-style: normal;
     font-weight: 500;
@@ -265,67 +282,93 @@ section {
 
 /* Footer styles */
 
-footer {
+.footer-content{
     display: flex;
+    padding: 48px 94px 24px 94px;
     flex-direction: column;
-    padding: 48px 24px;
-    margin: 24px;
-    background-color: #191C20;
+    gap: 24px;
     border-radius: 24px;
+    background: var(--BG---Secondary, #191C20);
+    margin-top: 112px;
+    margin-bottom: 24px;
+    margin-left: calc((100vw - 1240px) / 2);
+    margin-right: calc((100vw - 1240px) / 2);
 }
 
 .footer-content-container {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: space-between;    
+    align-items: flex-start;
 }
 
 .footer-contact-container {
     display: flex;
     flex-direction: column;
+    gap: 24px;
+
+}
+
+.footer-divider {
+    display: flex;
+    gap: 24px;
+    flex-direction: column;
+}
+
+.footer-line {
+    width: 100%;
+    min-width: 1024px;
+    height: 1px;
+    background: rgba(250, 250, 250, 0.08);
 }
 
 .footer-contact-follow {
-    margin-bottom: 24px;
-    color: #FAFAFA;
-    font-family: Inter;
+    color: var(--White---Hight-Empathy, #FAFAFA);
+    font-family: 'Inter';
     font-size: 18px;
     font-style: normal;
     font-weight: 600;
-    line-height: 26px;
+    line-height: 26px; /* 144.444% */
     align-self: stretch;
 }
 
 .footer-follow-wrapper {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    gap: 12px;
 }
 
 .footer-follow-link {
-    margin-right: 12px;
-    border-radius: 8px;
-    background: rgba(250, 250, 250, 0.08);
-}
-
-.footer-follow-img {
     padding: 12px;
-}
-
-.footer-divider {
-    width: 1024px;
-    height: 1px;
-    background: rgba(250, 250, 250, 0.08);
-    margin-top: 24px;
-    margin-bottom: 24px;
+    border-radius: 8px;
+    background: var(--stroke-bg, rgba(250, 250, 250, 0.08));
+    display: flex;
+    align-items: center;
 }
 
 .footer-text {
-    color: rgba(250, 250, 250, 0.74);
-    font-family: Inter;
+    color: var(--White---Medium-Empathy, rgba(250, 250, 250, 0.74));
+    font-family: 'Inter';
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: 20px; /* 142.857% */
+}
+
+.logo-section {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+    text-decoration: none
+}
+
+.logo-section .logo-text {
+    color: var(--White---Hight-Empathy, #FAFAFA);
+    font-family: 'Inter';
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 32px; /* 133.333% */
+    text-transform: lowercase;
 }
