--- a/src/components/newuser/createdTripUser.css
+++ b/src/components/newuser/createdTripUser.css
@@ -660,13 +660,14 @@ html, body {
     background: var(--Accent-1, #005A44);
 }
 
-/* Additonalsection styels */
+/* Additonalsection styles */
 
 .additional-container {
     display: flex;
     width: 1280px;
     padding: 48px 24px;
     align-items: flex-start;
+    flex-direction: row;
     gap: 24px;
 }
 
@@ -827,7 +828,6 @@ html, body {
     display: flex;
     width: 604px;
     height: 44px;
-    padding-left: 24px;
     flex-direction: column;
     align-items: flex-start;
     gap: 8px;
@@ -835,8 +835,7 @@ html, body {
 
 .descriptor {
     display: flex;
-    width: 570px;
-    height:294px;
+    width: 604px;
     padding: 24px;
     flex-direction: column;
     justify-content: center;
@@ -887,6 +886,7 @@ html, body {
 
 .descriptor-list > div > input {
     display: flex;
+    /* margin-bottom:50px; */
     padding: 12px 4px 12px 12px;
     align-items: center;
     flex: 1 0 0;
