--- a/src/components/recommendation/Rec-Card.css
+++ b/src/components/recommendation/Rec-Card.css
@@ -3,7 +3,7 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    height: auto;
+    height: 100%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
