--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -2,10 +2,11 @@
     background-image: url('../img/loginMap.svg');
     background-repeat: no-repeat;
     background-size: cover;
-    padding-bottom: 100%;
-    background-size: 70%;
+    padding-bottom: 30%;
+    background-size: 100%;
     background-position-x: center;
     display: flex;
     flex-direction: column;
-    /* background-position-y:center; */
+    background-attachment:local ;
+    background-position: absolute;
 }
