--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,5 +1,5 @@
 .login {
-    background-image: url('../img/loginMap.svg');
+    background-image: url('../img/loginMap2.svg');
     background-color: black;
     background-repeat: no-repeat;
     background-size: cover;
