--- a/src/components/journeys/widgetstyles.css
+++ b/src/components/journeys/widgetstyles.css
@@ -20,23 +20,21 @@ html, body {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     padding: 12px;
-    box-sizing: content-box;
 }
 
 .modal-content {
     background-color: #141414;
-    border-radius: 10px;
-    padding: 12px;
+    border-radius: 32px;
+    padding: 24px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 90%;
+    width: 1232px;
     height: 90%;
     overflow-y: auto;
     overflow-x: hidden;
-    box-sizing: content-box;
 }
 
 .close {
-    color: #aaaaaa;
+    color: #FAFAFA;
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -66,8 +64,9 @@ html, body {
 }
 
 .small-block {
-    flex: 0 0 30%;
-    height: 50%;
+    display: flex;
+    height: 105px;
+    width: 330px;
     padding: 12px;
     margin: 10px;
     text-align: center;
@@ -108,6 +107,8 @@ html, body {
 .first-row-container, .second-row-container {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 @keyframes gradient {
@@ -123,7 +124,7 @@ html, body {
 }
 
 .smallblock-container {
-    flex: 0 0 30%;
+    /* flex: 0 0 30%; */
     display: flex;
     flex-direction: column;
 }
