--- a/src/components/journeys/Journeys.css
+++ b/src/components/journeys/Journeys.css
@@ -291,7 +291,7 @@ section {
 
 .journeys-empty-text {
     color: #FAFAFA;
-    font-family: Inter;
+    font-family: "Inter";
     padding: 10px;
     font-size: 24px;
     font-style: normal;
