--- a/src/components/welcome-form/welcome-form-input.css
+++ b/src/components/welcome-form/welcome-form-input.css
@@ -12,4 +12,9 @@
 
   .find__input {
     background-color: #FAFAFA;
+    color: #141414;
+  }
+
+  .find__input::placeholder {
+    color: #141414;
   }
