--- a/src/components/journeys/widgetstyles.css
+++ b/src/components/journeys/widgetstyles.css
@@ -8,6 +8,16 @@ html, body {
     color: #FAFAFA;
 }
 
+.widget-header {
+    color: #FAFAFA;
+    font-family: "Inter";
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 40px;
+    letter-spacing: -0.64px;
+}
+
 .modal-container {
     display: flex;
     justify-content: center;
