--- a/src/components/journeys/Journeys.css
+++ b/src/components/journeys/Journeys.css
@@ -167,6 +167,9 @@ body {
 }
 
 .journeys-greeting-button {
+    transition: all .5s ease;
+    border: 3px solid rgba(250, 250, 250, 0.08);
+
     color: #FAFAFA;
     font-family: 'Inter';
     font-size: 14px;
@@ -179,9 +182,11 @@ body {
     justify-content: center;
     align-items: center;
     gap: 8px;
-    border: none;
     border-radius: 0px 8px 8px 0px;
-    background: rgba(250, 250, 250, 0.08);
+}
+
+button:hover {
+    background-color: rgba(250, 250, 250, 0.08);
 }
 
 #active-button {
@@ -217,10 +222,12 @@ section {
     background: #191C20;
     box-shadow: 4px 4px 30.4px 0px rgba(7, 5, 5, 0.20);
     padding: 24px;
+    overflow-x: scroll;
 }
 
 .journeys-list-item {
     padding: 24px;
+    margin: 12px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
