--- a/src/components/journeys/widgetstyles.css
+++ b/src/components/journeys/widgetstyles.css
@@ -17,6 +17,21 @@ body {
     font-weight: 500;
     line-height: 40px;
     letter-spacing: -0.64px;
+    text-align: left;
+}
+
+.widget-description {
+    height: 40px;
+    align-self: stretch;
+    overflow: hidden;
+    color: #FAFAFA;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-family: "Inter";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
 }
 
 .modal-container {
@@ -161,6 +176,7 @@ body {
     font-style: normal;
     font-weight: 500;
     line-height: 32px;
+    text-align: left;
 }
 
 .card-wrapper {
