--- a/src/components/newuser/createdTripUser.css
+++ b/src/components/newuser/createdTripUser.css
@@ -979,6 +979,7 @@ html, body {
     align-items: center;
     flex-direction: column;
     background: linear-gradient(-45deg, #5b39a2, #134b41, #422343);
+    background-size: 400% 400%;
     animation: gradient 15s ease infinite;
 }
 
@@ -986,11 +987,9 @@ html, body {
     0% {
         background-position: 0% 50%;
     }
-
     50% {
         background-position: 100% 50%;
     }
-
     100% {
         background-position: 0% 50%;
     }
@@ -1004,6 +1003,16 @@ html, body {
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+
+.weather-header {
+    color: #FAFAFA;
+    font-family: "Inter";
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 32px;
+    text-align: left;
 }
 
 .slider-buttons {
