--- a/src/components/journeys/widgetstyles.css
+++ b/src/components/journeys/widgetstyles.css
@@ -306,3 +306,23 @@ body {
 ::placeholder {
     color: rgba(250, 250, 250, 0.74);
 }
+
+.journey-popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+
+.journey-popup {
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+}
