--- a/src/components/newuser/createdTripUser.css
+++ b/src/components/newuser/createdTripUser.css
@@ -1035,7 +1035,7 @@ html, body {
 }
 
 .slider-button:hover {
-    background-color: #5b39a2;
+    background-color: #460b70;
     opacity: 70%;
     border: none;
 }
