--- a/src/components/journeys/Journeys.css
+++ b/src/components/journeys/Journeys.css
@@ -11,7 +11,7 @@ body {
     font-family: 'Inter', sans-serif;
     font-size: 16px;
     overflow-x: hidden;
-    background-color: #141414;
+    background: #191C20;
     color: #FAFAFA;
 }
 
@@ -335,7 +335,7 @@ section {
     flex-direction: column;
 }
 
-.journeys-list-empty {
+.journeys-empty {
     display: flex;
     justify-content: center;
     align-items: center;
