--- a/src/pages/CreateNewUserTrip.css
+++ b/src/pages/CreateNewUserTrip.css
@@ -28,3 +28,96 @@
     font-weight: 500;
     line-height: 32px; /* 133.333% */
 }
+
+.interesting-place {
+    width: 1232px;
+    padding: 24px;
+    display: flex;
+    gap: 24px;
+}
+
+.interesting-place h2 {
+    color: var(--White---Hight-Empathy, #FAFAFA);
+    font-family: 'Inter';
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 32px;
+    /* 133.333% */
+}
+
+
+.interesting-place span {
+    color: var(--White---Medium-Empathy, rgba(250, 250, 250, 0.74));
+    font-family: 'Inter';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    /* 150% */
+}
+
+.rdrDateRangePickerWrapper .rdrStartEdge,
+.rdrDateRangePickerWrapper .rdrEndEdge,
+.rdrDateRangePickerWrapper .rdrInRange,
+.rdrDateRangePickerWrapper .rdrSelected {
+    background-color: #005A44;
+}
+
+.rdrCalendarWrapper {
+    background-color: #191C20;
+}
+
+.rdrCalendarWrapper,
+.rdrCalendarWrapper label,
+.rdrCalendarWrapper button {
+    color: #fff;
+}
+
+.rdrDayNumber span {
+    color: #fff;
+}
+
+.rdrMonthAndYearWrapper,
+.rdrMonthAndYearPickers {
+    color: #fff;
+}
+
+.rdrDefinedRangesWrapper {
+    background-color: #191C20;
+    border-color: rgba(250, 250, 250, 0.08);
+}
+
+.rdrStaticRange {
+    background-color: #191C20;
+    border-color: rgba(250, 250, 250, 0.08);
+}
+
+.rdrInputRanges {
+    display: none;
+}
+
+.rdrStaticRangeLabel {
+    color: rgba(250, 250, 250, 0.74);
+}
+
+.rdrStaticRangeSelected {
+    background-color: #005A44;
+}
+
+.rdrDayDisabled {
+    background-color: #212429;
+}
+
+.rdrDateDisplayWrapper {
+    background-color: #191C20;
+}
+
+.rdrDateDisplayItem {
+    background-color: #191C20;
+    border-color: rgba(250, 250, 250, 0.08);
+}
+
+.rdrNextPrevButton {
+    background: rgba(250, 250, 250, 0.08);
+}
