--- a/src/pages/Welcome.css
+++ b/src/pages/Welcome.css
@@ -868,8 +868,6 @@ body.ie ._ibg img {
   background: url("../img/close.svg") 0 0 no-repeat;
 }
 
-
-
 .page {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
@@ -919,34 +917,9 @@ body.ie ._ibg img {
   font-weight: 400;
   color: #FAFAFA;
   margin: 0 0 56px 0;
-  letter-spacing: 0.02em;
+  /* letter-spacing: 0.02em; */
   text-align: center;
   padding: 0 128px;
-}
-
-.top__dividor {
-  margin: 0 5px;
-}
-
-.top__find {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: #FAFAFA;
-  border-radius: 46px;
-  padding: 14px 10px 14px 0;
-}
-
-.find__information {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .find__searchbut {
@@ -1071,3 +1044,69 @@ body.ie ._ibg img {
     }
   }
 
+.search-container {
+  display: flex;
+  flex-direction: row;
+  background-color: rgba(64, 64, 64, 0.7);
+  opacity:100%;
+  gap: 16px;
+  width: 1100px;
+  height: 80px;
+  padding: 16px 24px 16px 24px;
+  gap: 24px;
+  border-radius: 40px;
+}
+
+.search-container-input {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  align-items: flex-start;
+  border-right: 1px solid rgba(250, 250, 250, 0.08);
+  width: 288px;
+  padding: 5px;
+}
+
+.search-container-input:hover {
+  background-color: #212429;
+  border-radius: 10px;
+}
+
+.search-container-input.last-field {
+  border: none;
+}
+
+.search-field {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.search-field input {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  margin: 0;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.search-field input::placeholder {
+  color: var(--White---Medium-Empathy, rgba(250, 250, 250, 0.74));
+  font-family: 'Inter';
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.search-field label {
+  color: var(--White---Hight-Empathy, #FAFAFA);
+  font-family: 'Inter';
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  text-transform: capitalize;
+}
