--- a/src/components/recommendation/Rec-Section.css
+++ b/src/components/recommendation/Rec-Section.css
@@ -11,24 +11,36 @@
   .recommend__container {
     max-width: 1232px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 43px;
   }
 
   .recommend__top {
     margin: 0 auto 43px auto;
-  }
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+    }
 
   .recommend__topinfo {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
     margin: 0 0 8px 0;
+    display: flex;
+    flex-direction: column;
+    width: 888px;
+    height: 82px;
+    gap: 8px;
   }
+
 .swiper-slide {
     height: auto;
 }
@@ -75,14 +87,19 @@
   }
 
   .recommend__button:hover {
-    background-color: #005A44;
+    transform: scale(1.1);
+    transition: all .5s ease;
+    background-color: #460b70;
+    opacity: 70%;
     border: none;
   }
 
   .recommend__intro {
     font-size: 20px;
     line-height: 30px;
-    color: #FAFAFA;
+    color: #FAFAFABD;
+    font-size: 20px;
+    font-weight: 400;
   }
 
   .recommend__cards {
