--- a/src/components/places-to-visit/VisitPlace.css
+++ b/src/components/places-to-visit/VisitPlace.css
@@ -1,71 +1,62 @@
 .place-card {
     display: flex;
-    width: 584px;
+    width: auto;
+    max-width: 100%;
     padding: 12px;
-    justify-content: space-between;
-    align-items: flex-end;
-    gap: 8px;
+    flex-direction: row;
+    align-items: center;
+    gap: 13px;
     border-radius: 8px;
     background: var(--stroke-bg, rgba(250, 250, 250, 0.08));
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
 }
 
 .place-card-image {
-    width: 120px;
-    height: 130px;
+    width: 150px;
+    height: 150px;
     border-radius: 8px;
+    object-fit: cover;
 }
 
 .place-card-info {
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
     gap: 4px;
+    max-width: 269px;
 }
 
 .place-card-info h3 {
+    margin: 0;
     color: var(--White---Hight-Empathy, #FAFAFA);
     font-family: 'Inter';
     font-size: 16px;
-    font-style: normal;
     font-weight: 500;
     line-height: 24px;
-    /* 150% */
-    margin-bottom: 18px;
-    margin-top: 5px;
 }
 
 .place-card-info span {
     color: var(--White---Medium-Empathy, rgba(250, 250, 250, 0.74));
     font-family: 'Inter';
     font-size: 14px;
-    font-style: normal;
     font-weight: 400;
     line-height: 20px;
-    /* 142.857% */
-}
-
-
-.place-card-left {
-    display: flex;
-    width: 397px;
-    align-items: flex-start;
-    gap: 8px;
-    flex-shrink: 0;
 }
 
 .place-card-button {
-    display: flex;
-    height: 38px;
-    padding: 14px 24px 14px 28px;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
+    padding: 10px 20px;
     border-radius: 8px;
     background: var(--Accent-1, #005A44);
     color: var(--White---Hight-Empathy, #FAFAFA);
-    text-align: center;
     font-family: 'Inter';
     font-size: 14px;
     font-weight: 500;
     line-height: 20px;
-    /* 142.857% */
+    cursor: pointer;
+}
+
+.place-card-button {
+    width: 120px;
+    justify-content: center;
 }
