--- a/src/components/formInput/Form-Input.css
+++ b/src/components/formInput/Form-Input.css
@@ -1,7 +1,7 @@
 .search-container {
     display: flex;
     flex-direction: row;
-    background-color: transparent;
+    background-color: #191C20;
     gap: 16px;
      border-radius: 8px;
     box-shadow: 4px 4px 30.4px 0px rgba(7, 5, 5, 0.20);
