--- a/src/components/place-photos/slideshowstyles.css
+++ b/src/components/place-photos/slideshowstyles.css
@@ -3,6 +3,7 @@
     max-height: 230px;
     overflow: hidden;
     border-radius: 16px;
+    position: relative;
 }
 
 .carousel__btn {
@@ -19,10 +20,18 @@
     cursor: pointer;
     z-index: 1;
     transition: background-color 0.3s;
+
+    border-radius: 50%;
+    border-color: #FAFAFA;
+    background: rgba(0, 0, 0, 0.3);
+    border-width: 1px;
+    border-style: solid;
 }
 
 .carousel__btn:hover {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: #460b70;
+    opacity: 70%;
+    border: none;
 }
 
 .carousel__btn--prev {
