--- a/src/pages/CreateNewUserTrip.css
+++ b/src/pages/CreateNewUserTrip.css
@@ -123,3 +123,38 @@
 .rdrNextPrevButton {
     background: rgba(250, 250, 250, 0.08);
 }
+
+.swiper-button {
+    width: 46px;
+    height: 46px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    border-color: #FAFAFA;
+    background: rgba(0, 0, 0, 0.3);
+    border-width: 1px;
+    border-style: solid;
+}
+
+.swiper-button:hover {
+    transform: scale(1.1);
+    transition: all .5s ease;
+    background-color: #460b70;
+    opacity: 70%;
+    border: none;
+}
+
+.swiper-button .sbprev {
+    left: 0;
+}
+
+.swiper-button .sbnext {
+    right: 0;
+}
+
+.swipper-buttons {
+    display:flex;
+    flex-direction: row;
+    gap:8px;
+}
