--- a/src/pages/CreateNewUserTrip.css
+++ b/src/pages/CreateNewUserTrip.css
@@ -170,4 +170,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 20px;
+    gap: 20px;
+}
+
+.friends{
+    width: 100%;
+}
+
+.action-button {
+    margin-top: 10px;
 }
