--- a/src/components/formInput/Form-Input.css
+++ b/src/components/formInput/Form-Input.css
@@ -3,11 +3,10 @@
     flex-direction: row;
     background-color: #191C20;
     gap: 16px;
-     border-radius: 8px;
+    border-radius: 8px;
     box-shadow: 4px 4px 30.4px 0px rgba(7, 5, 5, 0.20);
     padding: 24px;
     height: 100px
-
 }
 
 .search-container-input {
@@ -35,18 +34,21 @@
     flex-direction: column;
     gap: 8px;
 }
+
 .date-input-wrapper {
-    position: relative; /* Creates a positioning context */
-    width: 100%; /* Ensure it spans the width needed */
-  }
-  
-  .date-picker-container {
+    position: relative;
+    /* Creates a positioning context */
+    width: 100%;
+    /* Ensure it spans the width needed */
+}
+
+.date-picker-container {
     position: absolute;
     top: 100%;
     left: -200px;
     width: 100%;
     z-index: 1000;
-  }
+}
 
 
 .search-field input {
