--- a/src/components/forms/FormSignUp.css
+++ b/src/components/forms/FormSignUp.css
@@ -3,11 +3,11 @@
     margin: 0px;
     border: 0px;
     box-sizing: border-box;
-    font-family: Inter;
+    font-family: "Inter";
     color: white;
 }
 
-.middle-item{
+.middle-item {
     display: flex;
     flex-direction: column;
     background-color: #191C20;
@@ -20,52 +20,53 @@
     gap: 16px;
 }
 
-.registration-top{
+.registration-top {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 24px;
 }
 
-.registration-top h2{
+.registration-top h2 {
     font-weight: 600;
     font-size: 20px;
 }
 
-.registration-top h5{
+.registration-top h5 {
     color: #FAFAFABD;
     font-weight: 400;
     font-size: 14px;
 }
 
-.form-login{
+.form-login {
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 
-.form-row{
+.form-row {
     display: flex;
     flex-direction: column;
     gap: 4px;
     color: #FAFAFABD;
     font-weight: 200;
 }
-.form-row label{
+
+.form-row label {
     font-size: 12px;
 }
 
-.password{
+.password {
     display: flex;
     flex-direction: row;
 }
 
-.password label{
+.password label {
     margin-left: -40px;
     margin-top: 12px;
 }
 
-.form-row input{
+.form-row input {
     background-color: transparent;
     border-radius: 8px;
     padding-left: 12px;
@@ -74,9 +75,10 @@
     padding-bottom: 15px;
     border: 2px solid #FAFAFA14;
 }
-.sign-up-button{
-    padding-top: 15px; 
-    padding-bottom: 15px; 
+
+.sign-up-button {
+    padding-top: 15px;
+    padding-bottom: 15px;
     border-radius: 48px;
     font-weight: 400;
     font-size: 16px;
@@ -84,27 +86,27 @@
     margin-bottom: 10px;
 }
 
-.registration-bottom{
+.registration-bottom {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 4px;
 }
 
-.registration-bottom h2{
+.registration-bottom h2 {
     color: #FAFAFABD;
     font-size: 14px;
     font-weight: 300;
 }
 
-.registration-bottom a{
+.registration-bottom a {
     text-decoration: none;
     color: white;
     font-size: 14px;
     font-weight: 400;
 }
 
-.terms-and-conditions{
+.terms-and-conditions {
     display: flex;
     flex-direction: row;
     gap: 8px;
@@ -113,13 +115,13 @@
     margin-bottom: 10px;
 }
 
-.password-row{
+.password-row {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-.password-row img{
+.password-row img {
     margin-left: -40px;
     cursor: pointer;
 }
