--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,19 +1,23 @@
 :root {
     --background-item-color: #191C20;
     --text-color: #1B1C57;
-    --text-secondary: #626687; /* Fix root setting for project */
+    --text-secondary: #626687;
+    /* Fix root setting for project */
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: inherit;
 }
 
 a {
-	text-decoration: none;
+    text-decoration: none;
 }
 
 
-html, body {
+html,
+body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -23,16 +27,16 @@ html, body {
 }
 
 .header-container {
-	display: flex;
-	flex-direction: row;
-	padding: 16px 24px;
-	border-radius: 32px;
-	background: var(--background-item-color);
-	box-shadow: 4px 4px 30.4px 0px rgba(7, 5, 5, 0.20);
-	justify-content: space-between;
-	margin-left: calc((100vw - 1240px) / 2);
-	margin-right: calc((100vw - 1240px) / 2);
-	}
+    display: flex;
+    flex-direction: row;
+    padding: 16px 24px;
+    border-radius: 32px;
+    background: var(--background-item-color);
+    box-shadow: 4px 4px 30.4px 0px rgba(7, 5, 5, 0.20);
+    justify-content: space-between;
+    margin-left: calc((100vw - 1240px) / 2);
+    margin-right: calc((100vw - 1240px) / 2);
+}
 
 .logo-section {
     display: flex;
@@ -48,7 +52,8 @@ html, body {
     font-size: 24px;
     font-style: normal;
     font-weight: 600;
-    line-height: 32px; /* 133.333% */
+    line-height: 32px;
+    /* 133.333% */
     text-transform: lowercase;
 }
 
@@ -136,7 +141,8 @@ html, body {
     font-size: 24px;
     font-style: normal;
     font-weight: 500;
-    line-height: 32px; /* 133.333% */
+    line-height: 32px;
+    /* 133.333% */
 }
 
 .header__loginbutton {
@@ -144,10 +150,10 @@ html, body {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -ms-grid-column-align: center;
-        justify-self: center;
+    justify-self: center;
     border-radius: 24px;
     background-color: #FAFAFA;
     padding: 12px 24px;
@@ -157,9 +163,9 @@ html, body {
     color: #141414;
     -webkit-transition: all 0.1s linear;
     transition: all 0.1s linear;
-  }
+}
 
-  .header__loginbutton:hover {
+.header__loginbutton:hover {
     background-color: #005A44;
     color: #FAFAFA;
-  }
+}
