--- a/src/pages/CreateNewUserTrip.css
+++ b/src/pages/CreateNewUserTrip.css
@@ -4,10 +4,9 @@
     gap: 24px;
     margin-top: 24px;
     margin-left: calc((100vw - 1240px) / 2);
-	margin-right: calc((100vw - 1240px) / 2);
+    margin-right: calc((100vw - 1240px) / 2);
 
 }
-
 
 .search-location {
     display: flex;
@@ -16,7 +15,7 @@
     gap: 24px;
     border-radius: 32px;
     background: var(--BG---Secondary, #191C20);
-    align-items: flex-start;
+    align-items: center
 }
 
 .search-location h2 {
@@ -26,7 +25,8 @@
     font-size: 24px;
     font-style: normal;
     font-weight: 500;
-    line-height: 32px; /* 133.333% */
+    line-height: 32px;
+    /* 133.333% */
 }
 
 .interesting-place {
@@ -47,7 +47,6 @@
     line-height: 32px;
     /* 133.333% */
 }
-
 
 .interesting-place span {
     color: var(--White---Medium-Empathy, rgba(250, 250, 250, 0.74));
@@ -154,9 +153,9 @@
 }
 
 .swipper-buttons {
-    display:flex;
+    display: flex;
     flex-direction: row;
-    gap:8px;
+    gap: 8px;
 }
 
 .additional-container {
@@ -174,7 +173,7 @@
     gap: 20px;
 }
 
-.friends{
+.friends {
     width: 100%;
 }
 
